--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest package="com.raystone.ray.goplaces_v1"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="18" />
+
     <permission
         android:name="in.wptrafficanalyzer.locationgeocodingv2.permission.MAPS_RECEIVE"
         android:protectionLevel="signature"/>
@@ -11,6 +15,11 @@
     <uses-permission android:name="android.permission.READ_PROFILE"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -56,11 +65,12 @@
 
         <service android:name=".MyCurrentLocationService"/>
 
-        <activity
-            android:name=".NavigationActivity"
-            android:label="@string/title_activity_navigation"
-            android:theme="@style/AppTheme">
-        </activity>
+    <activity android:name=".PlaceDetail.ChoosePicLevel3.PlaceActivity"/>
+        <activity android:name=".PlaceDetail.ChoosePicLevel1.ImageBucketLevel1Activity"/>
+        <activity android:name=".PlaceDetail.ChoosePicLevel2.ImageBucketLevel2Activity"/>
+        <activity android:name=".PlaceDetail.ChoosePicLevel4.ViewPicActivity"/>
+        <activity android:name=".Test"/>
+        <activity android:name=".PlaceDetail.ChoosePicLevel2.TestActivity"/>
     </application>
 
 </manifest>
