--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,36 +51,20 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity"
-                  android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".MyMapActivity"
-                  android:theme="@style/AppTheme.NoActionBar">
-        </activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key"/>
 
-        <receiver android:name=".MyMapFragment$LocationReceiver">
+        <receiver android:name=".Map.MyMapFragment$LocationReceiver">
         </receiver>
 
-        <service android:name=".MyCurrentLocationService"/>
+        <service android:name=".Helper.MyCurrentLocationService"/>
 
         <provider android:authorities="com.facebook.app.FacebookContentProvider915641231846809"
                   android:name="com.facebook.FacebookContentProvider"
                   android:exported="true" />
 
-        <activity android:name=".PlaceDetail.ChoosePicLevel1.ImageBucketLevel1Activity"
-                  android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".PlaceDetail.ChoosePicLevel2.ImageBucketLevel2Activity"
-                  android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".PlaceDetail.ChoosePicLevel3.PlaceActivity"
-                  android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".PlaceDetail.ChoosePicLevel4.ViewPicActivity"
-                  android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".PlaceList.PlaceListActivity"></activity>
-        <activity android:name=".PlaceDetail.EditPlace.EditPlaceActivity"
-                  android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name="com.facebook.FacebookActivity"
                   android:configChanges=
                       "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
