--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,14 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.raystone.ray.goplaces_v1"
+        applicationId "com.raystone.ray.goplaces"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
     }
+
+
     buildTypes {
         release {
             minifyEnabled false
