--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.raystone.ray.goplaces_v1"
+<manifest package="com.raystone.ray.goplaces"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-sdk
@@ -18,20 +18,18 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
-
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true"/>
 
-
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-
     <application
-        android:name=".Login.AppHashKey"
+        android:name="com.raystone.ray.goplaces.Login.AppHashKey"
         android:allowBackup="true"
         android:icon="@mipmap/icon"
         android:label="@string/app_name"
@@ -39,7 +37,7 @@
         android:theme="@style/AppTheme">
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
         <activity
-            android:name=".Login.LoginActivity"
+            android:name="com.raystone.ray.goplaces.Login.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/LoginTheme">
             <intent-filter>
@@ -49,13 +47,17 @@
         </activity>
 
         <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key"/>
 
-        <receiver android:name=".Map.MyMapFragment$LocationReceiver">
+        <receiver android:name="com.raystone.ray.goplaces.Map.MyMapFragment$LocationReceiver">
         </receiver>
 
-        <service android:name=".Helper.MyCurrentLocationService"/>
+        <service android:name="com.raystone.ray.goplaces.Helper.MyCurrentLocationService"/>
 
         <provider android:authorities="com.facebook.app.FacebookContentProvider695575380578791"
                   android:name="com.facebook.FacebookContentProvider"
